# parallax

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEBUG_UI_IMPLEMENTATION.md  EMPTY_TOOL_CALL_FIX.md  FIX_SUMMARY.md  LICENSE  MESSAGE_TAGS_FEATURE.md  PRETTY_ARGS_DISPLAY.md  QUICKSTART.md  README.md  SECURITY.md  TURN_ROLE_FIX.md
.cursor/rules/: rust_standards.mdc
.gemini/: GEMINI.md
.github/workflows/: ci.yml  release.yml
debug_ui/: index.html  package-lock.json  package.json  vite.config.ts
debug_ui/src/: App.tsx  index.css
migrations/: 20250101000001_initial_schema.sql  20250101000002_performance_indexes.sql  20250101000003_schema_version.sql
specs/: C2OR_SPEC.md  TRACE_SPEC.md
src/: agent_layer.rs  constants.rs  db.rs  debug_bundle.rs  debug_ui.html  debug_utils.rs  engine.rs  hardening.rs  health.rs  history_pruning.rs  ingress.rs  json_repair.rs  kernel.rs  lib.rs  log_rotation.rs  logging.rs  main.rs  main_helper.rs  metrics.rs  pricing.rs  projections.rs  redaction.rs  redaction_layer.rs  repro_issue.rs  rescue.rs  str_utils.rs  streaming.rs  tag_extract.rs  token_counting.rs  tool_schema.rs  tui.rs  types.rs
src/specs/: anthropic.rs  openai.rs
tests/: cache_projection_test.rs  migration_test.rs  mitigation_test.rs  observability_test.rs  resilience_test.rs  streaming_tool_call_id_map_test.rs  transforms_test.rs
