[package]
name = "parallax"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-tree = "0.3"
tracing-futures = "0.2"
regex = "1.10"
lazy_static = "1.4"
colored = "2.1"
futures-util = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
ratatui = "0.29"
crossterm = "0.28"
once_cell = "1.19"
sha2 = "0.10"
bytes = "1.5"
fastrand = "2.0"

[dev-dependencies]
tokio-test = "0.4"
