[package]
name = "parallax"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tokio-util = { version = "0.7", features = ["codec"] }
fastrand = "2.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0"
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
futures-util = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tower = { version = "0.5", features = ["util"] }
tempfile = "3.10"
tracing-error = "0.2"
tracing-appender = "0.2"
sha2 = "0.10"
colored = "2.1"
ratatui = "0.26"
crossterm = "0.27"
bytes = "1.6"
regex = "1.10"
lazy_static = "1.4"
